--- a/results/templates/normalize.html
+++ b/results/templates/normalize.html
@@ -1,6 +1,11 @@
-<html>
+<div class="main">
 
-<head>
-    <title>html test </title>
-</head>
-    </html>
+    <input type="text" id="course" name="name">
+    
+
+
+
+
+
+
+</div>
